k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drop-recovery-predictor
  namespace: "stocks"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drop-recovery-predictor
  template:
    metadata:
      labels:
        app: drop-recovery-predictor
    spec:
      containers:
      - name: drop-recovery-predictor
        image: docker.io/library/drop-recovery-predictor:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
