k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drop-recovery-predictor-service
spec:
  selector:
    app: drop-recovery-predictor
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31000
  type: NodePort
